# ceo-orchestration

./: .coveragerc  .gitignore  .shellcheckrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.pt-BR.md  HANDOFF-S272.md  HANDOFF-S277-PLAN160.md  INSTALL.md  LICENSE  Makefile  NOTICE  ORG_CHART.md  PROTOCOL.md  PROTOCOL.pt-BR.md  README.md  README.pt-BR.md  RELEASE.md  SBOM.md  SECURITY.md  SUPPORT.md  VERSIONING.md  conftest.py  pyproject.toml  pytest.ini  team.en.md
.changeset/: README.md
.claude/: adversary.md  agent-metrics.md  frontend-team.md  gpg-revocations.jsonl  pitfalls-catalog.yaml  sentinel-signers.txt  settings.json  skill-governance-grandfather.yaml  skill-patch-signers.txt  squad-revocations.jsonl  task-chains.yaml  team.md
.claude-plugin/: marketplace.json  plugin.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  actionlint.yaml  dependabot.yml  release-checklist.md  release-notes-template.md
benchmarks/: hook-latency-p50-p99-post-batch-F.jsonl  replay.py
docs/: ACCELERATORS.md  ADAPTIVE-EXECUTION-KERNEL.md  ADOPTER-ASSESSMENT.md  ADOPTER-READINESS-NOTES.md  ADOPTER-SCALE-TIERS.md  ARCHITECTURE-DIAGRAM.md  ARCHITECTURE.md  AUTONOMOUS-LOOP-GUIDE.md  BRANCH-PROTECTION.md  CAG-PATTERNS.md  CAG-VS-RAG.md  CEO-MITIGATION-DISPATCH.md  CEO-MODEL-ROUTING.md  CEO-ORCHESTRATION-FOR-CTO.md  CEO-ORCHESTRATION-FOR-CTO.pt-BR.md  CHEAT-SHEET.md  COMMAND-SKILL-HOOK-MAP.md  COMMON-PITFALLS.md  CROSS-LLM-THREAT-MODEL.md  CTO-GUIDE.md  DAY-1-CHECKLIST.md  DECISION-LOG.md  DISASTER-RECOVERY.md  EVAL-DOCTRINE.md  FAQ.md  (+88 more)
(+3109 files in other folders)
